pkg/front_end/testcases/inference_new/invalid_assignment_during_toplevel_inference.dart.strong.expect
library;
import self as self;
import "dart:core" as core;

static field core::int i;
static field core::String s;
static field core::String x = self::i = self::s as{TypeError} core::int;
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference_new/invalid_assignment_during_toplevel_inference.dart:9:58: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\nvar /*@topType=String*/ x = /*@error=InvalidAssignment*/ i = s;\n                                                         ^"]/* from null */;
static method main() → dynamic {}
